--- a/app/lib/about/about.scss
+++ b/app/lib/about/about.scss
@@ -22,7 +22,7 @@ p {
 }
 
 main {
- padding: 50px 50px 0px 50px;
+ padding: 20px 50px 0px 50px;
 
 }
 
@@ -131,7 +131,7 @@ section {
 .coachDetails .profileImg{border-radius: 50%; border: 1px solid #fff; margin-top: -85px; overflow: hidden; width: 150px; height: 150px}
 #footer{
  position:relative;
-  margin-top:200px;
+  margin-top:100px;
 
     background: #f2f2f2;
     height: 100px;
@@ -182,4 +182,18 @@ section {
 .contentAbout{
   font-size:17px;
   word-spacing:2px;
+}
+
+md-dialog{
+  width:75%;
+  }
+#mainModalDialog{
+  background-color: rgb(113,198,193);
+  padding: 30px ;
+  color:#ffffff;
+}
+#modalForm{
+  background-color:#ffffff;
+  padding:20px 60px;
+  color:#000000;
 }
