--- a/app/lib/home/home.scss
+++ b/app/lib/home/home.scss
@@ -125,6 +125,7 @@ margin: 0px auto;
     padding-top: 10px;
     padding-bottom: 10px;
     min-height:300px;
+    background-color:#ffffff;
 }
 ul.homeUls{
     list-style:none;
